<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Pelatihan.LoginActivity">

    <TextView
        android:id="@+id/Daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <TextView
        android:id="@+id/textEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/email"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Daftar"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/editEmail2"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_edit_text2"
        android:hint="@string/hintemail"
        android:padding="12dp"
        android:textSize="13sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textEmail2"
        app:layout_constraintTop_toBottomOf="@+id/textEmail2"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/textSandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/katasandi"

        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/editEmail2"
        app:layout_constraintTop_toBottomOf="@+id/editEmail2" />

    <EditText
        android:id="@+id/editSandi"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_edit_text2"
        android:hint="@string/hintsandi"
        android:padding="12dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textSandi"
        app:layout_constraintTop_toBottomOf="@+id/textSandi"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/textTambahan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="Atau masuk dengan"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_lengkung"
        android:text="@string/daftar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSandi" />

    <Button
        android:id="@+id/btn_Masuk"
        android:layout_width="wrap_content"
        android:textAlignment="textStart"
        android:layout_height="wrap_content"
        android:layout_marginStart="245dp"
        android:layout_marginEnd="75dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="@string/daftar"
        android:textColor="@color/RED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textmasuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="Sudah mempunyai akun?"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_Masuk"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintVertical_bias="0.268" />

</androidx.constraintlayout.widget.ConstraintLayout>