<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".Pelatihan.JobActivty">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/txt_kerja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="119dp"
            android:layout_marginTop="0dp"
            android:text="@string/judul_kerja"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/icon_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/ic_search" />

        <ImageView
            android:id="@+id/icon_bell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="-1dp"
            android:src="@drawable/ic_bell" />

    </LinearLayout>

    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="16dp" />


    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="140dp"
        android:backgroundTint="@color/red"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/simpan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space1" />

    <Button
        android:id="@+id/btn_kategori"
        android:layout_width="140dp"
        android:backgroundTint="@color/red"
        android:layout_height="wrap_content"
        android:text="@string/kategori"
        app:layout_constraintEnd_toStartOf="@+id/btn_simpan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space1" />

    <ScrollView
        android:id="@+id/scroll_kerja"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="144dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_kategori"
        tools:layout_editor_absoluteX="-2dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            tools:listitem="@layout/kerja_item" />


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>